--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -1,11 +1,10 @@
 @import "icons";
 @import "nav";
 @import "posts/post-preview";
-//@import "f";
 @import "posts";
 @import "slider";
 @import "ads";
-@import "buttons";
+@import "forms-elemets";
 @import "comments";
 
 @import "widget";
@@ -13,7 +12,6 @@
 @import "section";
 @import "sidebar";
 @import "fighter-card";
-@import "navbar";
 @import "table";
 @import "labels";
 @import "polls";
@@ -21,3 +19,4 @@
 @import "container";
 @import "footer";
 @import "utility";
+@import "custom-scrollbar";
