--- a/src/styles/components/utility.scss
+++ b/src/styles/components/utility.scss
@@ -3,3 +3,16 @@
 .fz-sm {
   font-size: $font-size-sm;
 }
+
+@include media-breakpoint-down(md) {
+  .fixed-md-top {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+  }
+  .pt-md-full {
+    padding-top: 77px;
+  }
+}
