--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,9 +4,12 @@ $black: #180706;
 $black-2: #131213;
 $black-200: #2C2C2C;
 $green: #54B869;
+$blue: #5F73FE;
+$blue-light: #5FA8FE;
 $skyblue: #35B8E0;
 $gray: #CFC5C5;
 $gray-200: #ECECEC;
+$gray-250: #EDE6E6;
 $gray-300: #E9E9E9;
 $gray-400: #E6E7EA;
 $gray-450: #DFDCE8;
@@ -17,6 +20,7 @@ $gray-800: #808286;
 $white: #fff;
 $white-100: #F4F7FF;
 $white-200: #f5f5f5;
+
 $blue-dark: #2A3042;
 $blue-dark-100: #575F78;
 
@@ -59,6 +63,7 @@ $border-radius-es:            3rem / $font-size-value;
 $tag-border-radius: 7rem / $font-size-value;
 $avatar-radius: 7rem / $font-size-value;
 $avatar-radius-lg: 20rem / $font-size-value;
+$scrollbar-radius: 4px;
 
 
 $border-radius-zero: 0;
@@ -103,11 +108,14 @@ $theme-colors: (
         "red-100": $red-100,
         "green": $green,
         "black": $black,
+        "blue": $blue,
+        "blue-light": $blue-light,
         "gray": $gray,
         "white": $white,
         "blue-dark": $blue-dark,
         "blue-dark-100": $blue-dark-100,
         "skyblue": $skyblue,
+        "gray-250": $gray-250,
         "gray-450": $gray-450,
         "gray-600": $gray-600,
         "gray-700": $gray-700,
