fix height navbar collapse

--- a/src/styles/components/nav/navbar.scss
+++ b/src/styles/components/nav/navbar.scss
@@ -125,6 +125,7 @@
       .navbar-main__collapse {
         display: block;
         width: 100%;
+        height: 100vh;
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
