--- a/src/styles/components/nav/nav-user.scss
+++ b/src/styles/components/nav/nav-user.scss
@@ -3,6 +3,9 @@
   display: grid;
   grid-auto-flow: column;
   grid-column-gap: 35px;
+  @include media-breakpoint-down(sm) {
+    grid-column-gap: 25px;
+  }
   &__link {
     color: $gray-250;
     &:hover {
