--- a/src/styles/components/comments/comments-item.scss
+++ b/src/styles/components/comments/comments-item.scss
@@ -83,22 +83,36 @@
       grid-column-gap: 10px;
     }
   }
-  .text-wrapper {
 
-  }
 }
 .comments-item_grid {
   .comments-item__col {
-    display: grid;
-    grid-template-columns: 50px 1fr;
-    grid-column-gap: 10px;
+    display: block;
     padding-bottom: 10px;
     border-bottom: 1px solid $gray-300;
+    @media screen and (max-width: 425px){
+      display: grid;
+      grid-template-columns: 50px 1fr;
+      grid-gap: 10px;
+    }
   }
-  .comments-item__avatar {
-    grid-column: 1;
-    grid-row: 1 / 4;
+  @media screen and (max-width: 425px) {
+    .comments-item__date {
+      grid-row: 3;
+      grid-column: 2;
+    }
+    .comments-item__avatar {
+      grid-row: 1 / 3;
+      grid-column: 1;
+    }
+    .comments-item__text-wrapper {
+      grid-column: 2 / 4;
+      grid-row: 2;
+      display: grid;
+    }
+
   }
+
 
 }
 
