--- a/src/styles/components/nav/nav-user.scss
+++ b/src/styles/components/nav/nav-user.scss
@@ -3,8 +3,12 @@
   display: grid;
   grid-auto-flow: column;
   grid-column-gap: 35px;
+  justify-content: end;
+  align-items: center;
   @include media-breakpoint-down(sm) {
-    grid-column-gap: 25px;
+    width: 100%;
+    justify-content: center;
+    grid-column-gap: 30px;
   }
   &__link {
     position: relative;
@@ -14,4 +18,5 @@
     }
 
   }
+
 }
