--- a/src/styles/components/profile/user-profile.scss
+++ b/src/styles/components/profile/user-profile.scss
@@ -97,13 +97,16 @@
 }
 
 .profile-tabs {
-  grid-template-columns: max-content max-content;
+  grid-template-columns: max-content;
   grid-gap: 10px;
   display: grid;
   grid-auto-flow: column;
   @include media-breakpoint-down(sm) {
     grid-auto-flow: row;
     grid-template-columns: auto auto;
+    &_sm-row {
+      grid-template-columns: auto;
+    }
     .btn {
       font-size: $font-size-sm;
     }
