--- a/src/styles/overrides/overrides.scss
+++ b/src/styles/overrides/overrides.scss
@@ -13,13 +13,9 @@ h1, .h1 {
     width: auto !important
   }
 }
-
-
 .card-img-overlay {
   padding: calc(30rem / 16);
 }
-
-
 
 .breadcrumb {
   background-color: transparent;
@@ -62,7 +58,6 @@ h1, .h1 {
   }
 }
 
-
 .custom-radio {
   &.w-20 {
     padding-left: 0;
@@ -80,5 +75,12 @@ h1, .h1 {
         left: 0;
       }
     }
+  }
+}
+
+
+.navbar-brand {
+  @include media-breakpoint-down(md) {
+    margin-right: 0px;
   }
 }
