--- a/src/styles/components/forms-elemets/input.scss
+++ b/src/styles/components/forms-elemets/input.scss
@@ -2,18 +2,32 @@
 
 .search-group {
   display: flex;
-  > .input {
-    &::-webkit-search-cancel-button {
-      -webkit-appearance: none;
-      width: 10px;
-      height: 10px;
-      background-color: red;
-    }
-    @include media-breakpoint-down(sm) {
+  &__input-wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  &__clear-btn {
+    grid-column: 2;
+    grid-row: 1;
+  }
+  &__input {
+    grid-column: 1 / 3;
+    grid-row: 1
+  }
+  @include media-breakpoint-down(sm) {
+    &__input-wrapper {
       position: absolute;
       top: 100%;
-      left: 50%;
-      transform: translateX(-50%);
+      width: 100%;
+      left: 0;
+    }
+  }
+
+  .input {
+    &::-webkit-search-cancel-button {
+      -webkit-appearance: none;
+    }
+    @include media-breakpoint-down(sm) {
       box-shadow: 0px 0px 3px $blue-dark;
       border-radius: 0;
     }
@@ -71,6 +85,9 @@
   }
 }
 
+.input-search {
+  padding-right: 30px;
+}
 
 .input-radius {
   &_sm {
