--- a/src/styles/components/nav/nav-user.scss
+++ b/src/styles/components/nav/nav-user.scss
@@ -7,7 +7,7 @@
   align-items: center;
   @include media-breakpoint-down(sm) {
     width: 100%;
-    justify-content: center;
+    justify-content: end;
     grid-column-gap: 30px;
   }
   &__link {
@@ -18,5 +18,6 @@
     }
 
   }
-
+  &__search {
+  }
 }
