--- a/src/styles/components/forms-elemets/btn-search.scss
+++ b/src/styles/components/forms-elemets/btn-search.scss
@@ -5,4 +5,9 @@
   padding: 0;
   background-color: transparent;
   color: $white;
+  &_dark {
+    color: rgba($blue-dark, 0.8);
+    padding: 0 10px;
+    border-left: 1px solid rgba($blue-dark, 0.8);
+  }
 }
