--- a/src/styles/components/posts/post-preview.scss
+++ b/src/styles/components/posts/post-preview.scss
@@ -38,7 +38,9 @@
   @include media-breakpoint-down(sm) {
     border-bottom: 0;
   }
-
+  &__image {
+    width: 100%;
+  }
   &__header {
     display: grid;
     grid-auto-flow: column;
