--- a/src/styles/components/notification.scss
+++ b/src/styles/components/notification.scss
@@ -2,6 +2,7 @@
 .notification-bar {
   display: none;
   padding: 20px 20px 25px;
+  margin-top: 0;
   justify-content: center;
   position: absolute;
   width: 390px;
