--- a/src/styles/components/nav/navbar.scss
+++ b/src/styles/components/nav/navbar.scss
@@ -45,7 +45,7 @@
     @include media-breakpoint-down(sm) {
       grid-row: 2;
       grid-column: 1 / end;
-      justify-items: center;
+      justify-items: end;
     }
   }
   &__nav-list {
