--- a/src/styles/components/fighter-card/fighter-data.scss
+++ b/src/styles/components/fighter-card/fighter-data.scss
@@ -29,7 +29,6 @@
   grid-auto-flow: row;
   width: 100%;
   grid-gap: 15px;
-
   &__row {
     display: grid;
     width: 100%;
@@ -41,7 +40,6 @@
       grid-template-columns: auto;
     }
   }
-
   .info-item {
     display: grid;
     padding-bottom: 13px;
@@ -66,6 +64,7 @@
       font-weight: $font-weight-medium;
       color: $blue-dark;
       text-align: right;
+      display: flex;
       @include media-breakpoint-down(md) {
         width: 100%;
       }
