--- a/src/styles/components/table/duel-card.scss
+++ b/src/styles/components/table/duel-card.scss
@@ -211,8 +211,114 @@
     }
   }
 }
+.duel-header {
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: max-content min-content max-content;
+  grid-column-gap: 30px;
+  align-items: center;
+  justify-content: center;
+  @include media-breakpoint-down(lg) {
+    grid-column-gap: 20px;
+  }
+  @include media-breakpoint-down(sm) {
+    grid-auto-flow: row;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    grid-row-gap: 20px;
+  }
+  &__col {
+    display: grid;
+    grid-row-gap: 3px;
+    justify-items: end;
+    align-items: center;
+    grid-template-columns: max-content 1fr;
+    grid-column-gap: 20px;
+    @include media-breakpoint-down(sm) {
+      grid-template-columns: repeat(3, max-content);
+    }
+    @media screen and (max-width: 375px) {
+      grid-template-columns: 28px 56px max-content;
+    }
 
-.duel-inner {
+    &.justify-start {
+      justify-items: start;
+    }
+
+    &.revert {
+      justify-items: start;
+
+      .duel-card__image {
+        grid-column: 1;
+        @include media-breakpoint-down(sm) {
+          grid-column: 2;
+        }
+      }
+    }
+  }
+  &__name {
+    color: $white;
+    font-weight: $font-weight-bold;
+    font-size: $font-size-md;
+    @media screen and (max-width: 375px) {
+      font-size: $font-size-base;
+    }
+  }
+  &__text-wrapper {
+    display: grid;
+    grid-gap: 5px;
+    @include media-breakpoint-down(sm) {
+      grid-auto-flow: row;
+      grid-column-gap: 10px;
+    }
+  }
+  &__text {
+    font-weight: $font-weight-medium;
+    color: rgba($white, $text-alpha);
+    @each $color, $value in $theme-colors {
+      &.#{$color} {
+        color: $value;
+      }
+    }
+  }
+  &__image {
+    max-width: 100px;
+    height: 100px;
+    overflow: hidden;
+    border-radius: $avatar-radius;
+    grid-row: 1 / 3;
+    grid-column: 2;
+    @include media-breakpoint-down(sm) {
+      grid-row: 1;
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    @media screen and (max-width: 375px) {
+      height: auto;
+    }
+  }
+  &__label {
+    @include media-breakpoint-down(sm) {
+      grid-column: 1;
+      grid-row: 1;
+      width: 100%;
+    }
+  }
+  &__icon {
+    color: rgba($white, $text-alpha);
+
+    .icon {
+      width: 25px;
+      height: 25px;
+    }
+  }
+}
+.duel-header_small {
   grid-column-gap: 15px;
   @include media-breakpoint-down(lg) {
     grid-column-gap: 5px;
@@ -220,8 +326,7 @@
   @include media-breakpoint-down(sm) {
     grid-row-gap: 15px;
   }
-
-  .duel-card {
+  .duel-header {
     &__col {
       grid-column-gap: 10px;
       grid-row-gap: 0;
