--- a/src/styles/components/custom-scrollbar.scss
+++ b/src/styles/components/custom-scrollbar.scss
@@ -1,8 +1,8 @@
 @import "../theme-base";
 .scrollbar-custom {
-  margin-right: -15px;
-  padding-right: 15px;
-  overflow-y: scroll;
+  //margin-right: -15px;
+  //padding-right: 15px;
+  //overflow-y: scroll;
 }
 .scrollbar-custom::-webkit-scrollbar {
   width: 5px;
@@ -11,12 +11,21 @@
   }
 }
 
-.scrollbar-custom::-webkit-scrollbar-track {
+.simplebar-track.simplebar-vertical {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: $gray-450;
+  width: 5px;
+  right: -10px;
 }
 
-.scrollbar-custom::-webkit-scrollbar-thumb {
+.simplebar-scrollbar::before {
+  width: 100%;
+  left: 0;
   background-color: $red;
   border-radius: $scrollbar-radius;
 }
+.simplebar-scrollbar.simplebar-visible:before {
+  opacity: 1;
+}
+
+
