--- a/src/styles/components/posts/post-preview.scss
+++ b/src/styles/components/posts/post-preview.scss
@@ -15,6 +15,17 @@
     @include media-breakpoint-down(sm) {
       grid-template: auto / auto;
     }
+    .simplebar-content {
+      display: grid;
+      grid-gap: 20px;
+      grid-template: auto auto / auto auto;
+      &::before {
+        display: none;
+      }
+      @include media-breakpoint-down(sm) {
+        grid-template: auto / auto;
+      }
+    }
   }
 
   &.child-border-none {
