--- a/src/styles/components/custom-scrollbar.scss
+++ b/src/styles/components/custom-scrollbar.scss
@@ -1,15 +1,4 @@
 @import "../theme-base";
-.scrollbar-custom {
-  //margin-right: -15px;
-  //padding-right: 15px;
-  //overflow-y: scroll;
-}
-.scrollbar-custom::-webkit-scrollbar {
-  width: 5px;
-  &:hover {
-   cursor: pointer ;
-  }
-}
 
 .simplebar-track.simplebar-vertical {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -24,8 +13,9 @@
   background-color: $red;
   border-radius: $scrollbar-radius;
 }
-.simplebar-scrollbar.simplebar-visible:before {
-  opacity: 1;
+
+.simplebar-scrollbar.simplebar-visible::before {
+  opacity: 1 !important;
 }
 
 
