--- a/src/styles/criticalcss.scss
+++ b/src/styles/criticalcss.scss
@@ -1,25 +1,6 @@
 @import "theme-base";
-html, body {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-.header {
-  position: relative;
-  padding-bottom: 1px;
-}
-
-.preload-box {
-  position: absolute;
-  z-index: 10;
-  width: 100%;
-  height: 100%;
-  background-color: $blue-dark;
-}
-
-.banner {
-  position: relative;
-}
+@import "node_modules/bootstrap/scss/grid";
+@import "node_modules/bootstrap/scss/utilities";
 @import "components/nav/navbar";
 @import "components/nav/nav-user";
 @import "components/forms-elemets/btn-search";
