--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,11 +7,9 @@
 @import "node_modules/bootstrap/scss/type";
 @import "node_modules/bootstrap/scss/images";
 @import "node_modules/bootstrap/scss/code";
-@import "node_modules/bootstrap/scss/grid";
 @import "node_modules/bootstrap/scss/buttons";
 @import "node_modules/bootstrap/scss/navbar";
 @import "node_modules/bootstrap/scss/nav";
-@import "node_modules/bootstrap/scss/utilities";
 @import "node_modules/bootstrap/scss/dropdown";
 @import "node_modules/bootstrap/scss/breadcrumb";
 @import "node_modules/bootstrap/scss/pagination";
@@ -38,9 +36,23 @@
 // другие стили писать тут
 @import "common";
 
-.preload-box {
-  display: none;
+.navbar-main {
 }
 .header {
   padding-bottom: 0;
+  height: auto;
+  margin-bottom: 0;
+}
+
+.navbar-main__collapse {
+  opacity: 1;
+}
+.post-preview:before,
+.fighter-category:before,
+.navbar-main::before {
+  content: '';
+  display: none;
+}
+.post-preview, .fighter-category {
+  position: static;
 }
