--- a/src/styles/components/comments/comments-item.scss
+++ b/src/styles/components/comments/comments-item.scss
@@ -3,22 +3,17 @@
   display: grid;
   grid-auto-flow: row;
   grid-gap: $spacer / 2;
-  @include media-breakpoint-down(sm) {
-    margin-left: -15px;
-    margin-right: -15px;
-  }
 }
 
-.comments-item {
+.comment-wrapper {
   padding: 30px;
   background-color: $white-200;
   border-radius: $border-radius-sm;
   @include media-breakpoint-down(sm) {
     padding: 20px;
-
   }
 }
-.comments-item {
+.comment-item {
   &__header {
     display: flex;
     justify-content: space-between;
@@ -70,11 +65,7 @@
   }
   &__text {
     color: $blue-dark;
-    @each $color, $value in $theme-colors {
-      &.#{$color} {
-        color: $value;
-      }
-    }
+
   }
   &__nav {
     display: grid;
@@ -83,10 +74,16 @@
       grid-column-gap: 10px;
     }
   }
+  &__answers {
+    padding-left: 50px;
+    @include media-breakpoint-down(sm) {
+      padding-left: 20px;
+    }
+  }
 
 }
-.comments-item_grid {
-  .comments-item__col {
+.comment-item_grid {
+  .comment-item__col {
     display: block;
     padding-bottom: 10px;
     border-bottom: 1px solid $gray-300;
@@ -97,15 +94,15 @@
     }
   }
   @media screen and (max-width: 425px) {
-    .comments-item__date {
+    .comment-item__date {
       grid-row: 3;
       grid-column: 2;
     }
-    .comments-item__avatar {
+    .comment-item__avatar {
       grid-row: 1 / 3;
       grid-column: 1;
     }
-    .comments-item__text-wrapper {
+    .comment-item__text-wrapper {
       grid-column: 2 / 4;
       grid-row: 2;
       display: grid;
