--- a/src/styles/components/nav/navbar.scss
+++ b/src/styles/components/nav/navbar.scss
@@ -88,7 +88,6 @@
       }
     }
   }
-
   &__right{
     display: flex;
     align-items: center;
@@ -96,7 +95,6 @@
       grid-column: 2;
     }
   }
-
   &__auth-col {
     display: grid;
     align-items: center;
@@ -108,7 +106,6 @@
       display: none;
     }
   }
-
   .nav-link {
     color: $white;
     &_btn {
@@ -134,8 +131,9 @@
     &.show {
       .navbar-main__collapse {
         display: block;
-        width: 100%;
-        height: 100vh;
+        width: 110%;
+        height: calc(100vh - 74px);
+        overflow-x: auto;
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
@@ -145,6 +143,9 @@
         padding-bottom: 65px;
         @include media-breakpoint-down(md) {
           padding-bottom: 25px;
+        }
+        @include media-breakpoint-down(sm) {
+          height: calc(100vh - 110px);
         }
 
       }
@@ -297,13 +298,11 @@
   }
 }
 
-
 .flex {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
 
 .menu {
   width: 90%;
