--- a/src/styles/components/posts/post-elements.scss
+++ b/src/styles/components/posts/post-elements.scss
@@ -53,7 +53,13 @@
     font-weight: $font-weight-medium;
     padding-right: 10px;
     position: relative;
-
+    transition: transform .2s;
+    &:hover {
+      color: currentColor;
+      text-decoration: none;
+      transform: scale(1.02);
+      color: $red;
+    }
     @each $color, $value in $theme-colors {
       &.#{$color} {
         color: $value;
