--- a/src/styles/components/posts/post-preview.scss
+++ b/src/styles/components/posts/post-preview.scss
@@ -237,7 +237,7 @@
       display: grid;
       grid-gap: 8px;
       border-top: 1px solid $gray;
-      grid-template-rows: auto;
+      grid-template-rows: 100%;
       @include media-breakpoint-down(sm) {
         &.border-sm-none {
           border-top: none;
