--- a/src/styles/components/table/list-table.scss
+++ b/src/styles/components/table/list-table.scss
@@ -10,6 +10,7 @@
     padding-right: 25px;
     @include media-breakpoint-down(sm) {
       grid-template-columns: auto auto;
+      justify-content: space-between;
     }
     @include media-breakpoint-down(sm){
       padding-left: 15px;
@@ -66,7 +67,7 @@
       }
       &_way-mobile {
         position: relative;
-        grid-column: 1 / 4;
+        grid-column: 1 / 3;
         grid-row: 3;
         padding-left: 70px;
         &::before {
